# llm-from-scratch

./: .containerignore  .gitignore  01-minimal-gpt.html  02-modern-components.html  03-efficiency.html  04-real-data.html  05-evaluation.html  06-deploy-governance.html  06-serving.html  07-alignment.html  07-governance.html  08-drift-retrain.html  08-math-appendix.html  09-alignment.html  10-math-appendix.html  11-glossary.html  99-references.html  CLAUDE.md  Containerfile  LICENSE  Makefile  README.md  TODO.md  index.html  matplotlibrc  pyproject.toml  requirements.txt  search.json
book/: .gitignore  01-minimal-gpt.qmd  02-modern-components.qmd  03-efficiency.qmd  04-real-data.qmd  05-evaluation.qmd  06-deploy-governance.qmd  06-serving.qmd  07-alignment.qmd  07-governance.qmd  08-drift-retrain.qmd  08-math-appendix.qmd  09-alignment.qmd  09-glossary.qmd  11-glossary.qmd  99-references.qmd  IMPROVEMENT-PLAN.md  README.md  _quarto.yml  index.qmd  references.bib  theme.scss
book2-edge/: IMPROVEMENT-PLAN.md
docs/: case-study.md  data-pipeline.md  derivations.md  exercise-dpo-derivation.md  interview-talking-points.md  learning-plan.md  lessons-learned.md  modern-components.md  reading-the-charts.md  session-handoff.md  theory-map.md  verification-playbook.md
monitoring/: down.sh  prometheus.yml  up.sh
notebooks/: 01_explore_data.ipynb  02_monitor.ipynb
pipeline/: 01_prepare_data.py  02_train.py  03_eval.py  04_generate.py  05_sft.py  06_dpo.py  07_reward_model.py  08_grpo.py  09_ppo.py  plot_loss.py  train_utils.py  viz_attention.py
registry/: registry.json
(+62 files in other folders)
